--- a/Flow.Launcher.Plugin.OneNote/UI/Styles.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Styles.xaml
@@ -28,10 +28,7 @@
         IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
         CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     -->
-    <Style
-        x:Key="SideToggleSwitch"
-        BasedOn="{StaticResource DefaultToggleSwitch}"
-        TargetType="{x:Type ui:ToggleSwitch}">
+    <Style x:Key="SideToggleSwitch" TargetType="{x:Type ui:ToggleSwitch}">
         <Setter Property="Grid.Column" Value="2" />
         <Setter Property="FocusVisualMargin" Value="5" />
         <Setter Property="Width" Value="Auto" />
