--- a/Flow.Launcher.Plugin.OneNote/UI/Views/ChangeKeywordWindow.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/ChangeKeywordWindow.xaml
@@ -1,10 +1,10 @@
 <Window
-    x:Class="Flow.Launcher.Plugin.OneNote.UI.ChangeKeywordWindow"
+    x:Class="Flow.Launcher.Plugin.OneNote.UI.Views.ChangeKeywordWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.UI"
+    xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.UI.ViewModels"
     Title="Change Keyword"
     Width="450"
     d:DataContext="{d:DesignInstance Type=vm:ChangeKeywordViewModel}"
