--- a/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl
-    x:Class="Flow.Launcher.Plugin.OneNote.UI.SettingsView"
+    x:Class="Flow.Launcher.Plugin.OneNote.UI.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
-    xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.UI"
+    xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.UI.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}"
     d:DesignHeight="700"
     d:DesignWidth="900"
@@ -15,7 +15,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemeResources />
-                <ResourceDictionary Source="Styles.xaml" />
+                <ResourceDictionary Source="/Flow.Launcher.Plugin.OneNote;component/UI/Views/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -82,7 +82,7 @@
                         HorizontalContentAlignment="Center"
                         Click="ClearCachedIcons">
                         <Label HorizontalAlignment="Center">
-                            <TextBlock Text="{Binding Icons.CachedIconsFileSize, StringFormat='Clear Cached Images:  {0}'}"/>
+                            <TextBlock Text="{Binding Icons.CachedIconsFileSize, StringFormat='Clear Cached Images:  {0}'}" />
                         </Label>
                         <Button.Style>
                             <Style BasedOn="{StaticResource SettingButton}" TargetType="Button">
