Clean settings ui

--- a/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
@@ -15,7 +15,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemeResources />
-                <ResourceDictionary Source="/Flow.Launcher.Plugin.OneNote;component/UI/Views/Styles.xaml" />
+                <ResourceDictionary Source="/Flow.Launcher.Plugin.OneNote;component/UI/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
