--- a/Flow.Launcher.Plugin.OneNote/UI/Styles.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Styles.xaml
@@ -34,7 +34,7 @@
         <Setter Property="Width" Value="Auto" />
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="HorizontalContentAlignment" Value="Right" />
-        <Setter Property="Margin" Value="0,4,22,4" />
+        <Setter Property="Margin" Value="0,4,-55,4" />
         <Setter Property="OffContentTemplate">
             <Setter.Value>
                 <DataTemplate>
