Rename images to match icon theme rather than plugin theme
It makes sense right? Right?

--- a/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
@@ -96,11 +96,11 @@
         </Border>
         <!--#endregion-->
         
-        <!--#region Plugin Theme-->
+        <!--#region Icon Theme-->
         <Border Style="{DynamicResource SettingGroupBox}">
             <ItemsControl Style="{StaticResource SettingGrid}">
                 <StackPanel Style="{StaticResource TextPanel}">
-                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Plugin theme" />
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Icon theme" />
                 </StackPanel>
                 <ComboBox
                     Grid.Column="2"
