Refactored Icon.cs to be non-static
Moved all result creation to ResultCreator.cs

--- a/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/SettingsView.xaml
@@ -83,7 +83,7 @@
                         Click="ClearCachedIcons"
                         IsEnabled="{Binding CanClearCachedIcons}">
                         <Label HorizontalAlignment="Center">
-                            <TextBlock Text="{Binding Icons.CachedIconsFileSize, StringFormat='Clear Cached Images:  {0}'}" />
+                            <TextBlock Text="{Binding IconProvider.CachedIconsFileSize, StringFormat='Clear Cached Images:  {0}'}" />
                         </Label>
                     </Button>
                     <Button Margin="0,4,22,4" Click="OpenGeneratedIconsFolder">
