Add ForceReQuery method to Main.cs
Also, an assortment of tweaks

--- a/Flow.Launcher.Plugin.OneNote/UI/Views/ChangeKeywordWindow.xaml
+++ b/Flow.Launcher.Plugin.OneNote/UI/Views/ChangeKeywordWindow.xaml
@@ -10,7 +10,7 @@
     d:DataContext="{d:DesignInstance Type=vm:ChangeKeywordViewModel}"
     Background="{DynamicResource PopuBGColor}"
     Foreground="{DynamicResource PopupTextColor}"
-    Loaded="WindowLoaded"
+    FocusManager.FocusedElement="{Binding ElementName=TextBox_NewKeyword}"
     ResizeMode="NoResize"
     SizeToContent="Height"
     WindowStartupLocation="CenterScreen"
